--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,5 +11,9 @@
 // Bulma
 @import "../../../node_modules/bulma/bulma";
 
+@import "hand-diagram";
+@import "form";
 
 //@import "font-awesome/font-awesome";
+
+
