new Auction module, various fixes

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -35,3 +35,16 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+
+
+// Bidding box ans suit color:
+
+$pass: #008900;
+$double: #FF0000;
+$redouble: #5300FF;
+
+$club: #008900;
+$diamond: #FFA100;
+$heart: #FF0000;
+$spade: #4200FF;
+$notrump: black;
