changed alert format to json, updated view to show alrted bids correctly

--- a/resources/assets/sass/_hand-diagram.scss
+++ b/resources/assets/sass/_hand-diagram.scss
@@ -112,3 +112,17 @@
     }
   }
 }
+
+
+.alerts{
+  margin-top: 30px;
+}
+
+.alerted-bid{
+  font-weight: bolder;
+
+  &:after{
+    color: red;
+    content: ' !';
+  }
+}
