--- a/resources/assets/sass/_form.scss
+++ b/resources/assets/sass/_form.scss
@@ -6,7 +6,7 @@
     background-color: darken($body-bg, 5%);
     legend{
       font-size: $font-size-base*2;
-      border-bottom: 1px solid $brand-info;
+      border-bottom: 1px solid $info;
     }
   }
 
